# CREWAI_PROJECT

./: README.md
mpr7/: README.md  pyproject.toml  report.md
mpr7/jobs/: jobs.csv
mpr7/src/mpr7/: crew.py  main.py
mpr7/src/mpr7/config/: agents.py  agents.yaml  tasks.py  tasks.yaml
mpr7/src/mpr7/tools/: job_reader.py
