[project]
name = "mpr7"
version = "0.1.0"
description = "MPR7 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
]

[project.scripts]
mpr7 = "mpr7.main:run"
run_crew = "mpr7.main:run"
train = "mpr7.main:train"
replay = "mpr7.main:replay"
test = "mpr7.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
